@@ -3,7 +3,11 @@
 	Plugin Name: Yotpo Social Reviews for Woocommerce
 	Description: Yotpo Social Reviews helps Woocommerce store owners generate a ton of reviews for their products. Yotpo is the only solution which makes it easy to share your reviews automatically to your social networks to gain a boost in traffic and an increase in sales.
 	Author: Yotpo
+<<<<<<< HEAD
 	Version: 1.1.2
+=======
+	Version: 1.0.8
+>>>>>>> update pugin to work with the new widget
 	Author URI: http://www.yotpo.com?utm_source=yotpo_plugin_woocommerce&utm_medium=plugin_page_link&utm_campaign=woocommerce_plugin_page_link	
 	Plugin URI: http://www.yotpo.com?utm_source=yotpo_plugin_woocommerce&utm_medium=plugin_page_link&utm_campaign=woocommerce_plugin_page_link
  */
@@ -104,7 +108,7 @@ function wc_yotpo_show_widget() {
 	$product = get_product();
 	if($product->post->comment_status == 'open') {		
 		$product_data = wc_yotpo_get_product_data($product);	
-		$yotpo_div = "<div class='yotpo reviews' 
+		$yotpo_div = "<div class='yotpo yotpo-main-widget'
 	 				data-appkey='".$product_data['app_key']."'
 	   				data-domain='".$product_data['shop_domain']."'
 	   				data-product-id='".$product_data['id']."'
@@ -134,7 +138,9 @@ function wc_yotpo_show_widget_in_tab($tabs) {
 
 function wc_yotpo_load_js(){
 	if(wc_yotpo_is_who_commerce_installed()) {
-        wp_enqueue_script( 'yquery', plugins_url('assets/js/headerScript.js', __FILE__) ,null,null);
+		wp_enqueue_script('yquery', plugins_url('assets/js/headerScript.js', __FILE__) ,null,null);
+		$settings = get_option('yotpo_settings',wc_yotpo_get_degault_settings());
+		wp_localize_script('yquery', 'yotpo_settings', array('app_key' => $settings['app_key']));
 	}
 }
 
